[package]
description = "Peripheral access API for nrf52840 microcontrollers"
documentation = "https://docs.rs/nrf52840"
keywords = ["no-std", "arm", "cortex-m", "nrf52840"]
license = "MIT"
name = "nrf52840"
repository = "https://github.com/jscarrott/nrf52840"
version = "0.1.3"
authors = ["jscarrott <johnps@outlook.com>"]

[dependencies]
bare-metal = "0.1.0"
vcell = "0.1.0"

[dependencies.cortex-m]
version = "0.5.2"

[dependencies.cortex-m-rt]
version = "0.5.1"
optional = true

[features]
rt = ["cortex-m-rt/device"]

